--- a/frontend-react/src/pages/HomePage.css
+++ b/frontend-react/src/pages/HomePage.css
@@ -9,7 +9,7 @@
 }
 
 .bottom-half {
-	min-height: 100vh;
+	min-height: 90vh;
 }
 
 .top-half .button-row {
